@@ -18,6 +18,8 @@ EXTERN_C_BEGIN
 /* return -1 on failure */
 extern int signal_name_to_number(const char *restrict name);
 
+extern const char *signal_number_to_name(int signo);
+
 extern int print_given_signals(int argc, const char *restrict const *restrict argv, int max_line);
 
 extern void pretty_print_signals(void);
