@@ -7,7 +7,7 @@
  * handling, unlimited command length, long line handling) added Apr 1999 by
  * Mike Coleman <mkc@acm.org>.
  *
- * Changes by Albert Cahalan, 2002.
+ * Changes by Albert Cahalan, 2002-2003.
  */
 
 #define VERSION "0.2.0"
